# iaat-whisper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build_docker_image.sh  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
app/: Accueil.py
app/pages/: 1_Transcription.py  2_Sous-titrage.py  Compte-rendu.py  Sous-titrage.py
app/static/fonts/: README.md
app/utils/: api.py  log.py  process.py  resource.py  secrets.py  style.py
templates/: brainstorming_summary_prompt.j2  discussion_summary_prompt.j2  interview_summary_prompt.j2  meeting_report_prompt.j2  presentation_summary_prompt.j2  srt_translate_system_prompt.j2  srt_translate_user_prompt.j2  summary_system_prompt.j2
tests/: test_api.py  test_main.py  test_process.py  test_secrets.py  test_style.py
